2023/06/02 - Bug Fixed& Documents updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
+### OS generated files ###
 **/.DS_Store
+**/.vscode
 
-venv/
-
-*.pyc
+### Python things ###
+# System
 **/__pycache__
+**/pytest_cache
 
-instance/
 
-.pytest_cache/
-.coverage
-htmlcov/
-
-dist/
-build/
-*.egg-info/
+# Packaging
+*venv*/
+*.egg-info
